codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__unified_exec_footer__tests__render_many_sessions.snap
---
source: tui/src/bottom_pane/unified_exec_footer.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 50, height: 1 },
    content: [
        "  123 个后台终端正在运行 · /ps 查看 · /clean 关闭 ", // hidden by multi-width symbols: [(7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (32, " "), (34, " "), (46, " "), (48, " ")]
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 7, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 9, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 11, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 13, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 15, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 17, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 19, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 21, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 23, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 32, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 33, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 34, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 35, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 46, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 47, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 48, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
